Changes in Cristofer543

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -25,6 +25,7 @@
                 <li>Ver tu información de perfil</li>
                 <li>Editar la configuración de tu cuenta</li>
                 <li>Acceder a funciones exclusivas</li>
+                <li>Funciones Nuevas y Solucion de errores constantemente</li>
                 <li>Y mucho más...</li>
             </ul>
         </div>
