--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -171,21 +171,6 @@
         <% } %>
     </div>
 
-    <script>
-        function showAddAdminModal() {
-            document.getElementById("addAdminModal").style.display = "block";
-        }
-
-        function showUpdateModal(userId, username, email) {
-            document.getElementById("updateUserId").value = userId;
-            document.getElementById("updateUsername").value = username;
-            document.getElementById("updateEmail").value = email;
-            document.getElementById("updateModal").style.display = "block";
-        }
-
-        function hideModal(modalId) {
-            document.getElementById(modalId).style.display = "none";
-        }
-    </script>
+    <script src="/src/public/js/addAdminModal.js"></script>
 </body>
 </html>
